--- a/css/style.css
+++ b/css/style.css
@@ -1,368 +1,378 @@
-/*Global Section*/
-
 body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
-	text-transform: uppercase;
-}
-
-* {
-	box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
 }
 
 .wrapper {
-	max-width: 1140px;
-	margin: auto;
+	max-width: 1440px;
 }
 
-.navbar {
-	height: 90px; 
-	box-shadow: 0px 2px 4.75px 0.25px rgba(0, 0, 0, 0.15);
-	padding-top: 27px;
-	position: relative;
-	background-color: #FFF;
+.wrapper-sm {
+	max-width: 800px;
 }
 
-.logo {
-	max-width: 100%;
-	height: auto;
-	margin-right: auto;
-	padding:0 22px;
+.wrapper-xs {
+	max-width: 660px;
 }
 
-.flex-row {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: flex-end;
-	align-items: center;
-}
-
-.button-m {
-	padding: 9px 20px;
-
-}
-
-.text-highlighted {
-	color: #000;
-}
-
-/* Navbar Links START*/
-
-.navbar__dropdown {
-	display: none;
-}
-
-/*.navbar__phone-menu {
-	display: none;
-}*/
-
-.navbar__link {
-	display: inline-block;
-	text-decoration: none;
-	text-align: center;
-	padding: 0 22px;
-	font-size: 14px;
-	font-weight: bold;
-	letter-spacing: 0.075em;
-	color: #777;
-	transition: all 0.3s ease-in-out;
-}
-
-.navbar__link:visited {
-	color: #777;
-}
-.navbar__link:hover, .navbar__link:active  {
-	color: #000;
-}
-
-/* Navbar Links END*/
-
-.slider {
+.header {
 	width: 100%;
-	height: 650px;
-	background: url(../img/slider_img.jpg) no-repeat center top / cover;
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: center;
-	align-items: center;
+	height: 750px;
+  	background: linear-gradient( 143deg, rgba(29,233,182,0.9) 0%, rgba(0,184,212,0.9) 100%),
+  	url(../img/header_background.jpg)  center center no-repeat / cover;
 }
-
-.h1 {
-	background-color: #000;
-	color: #fff;
-	font-weight: 300;
-	font-size: 3em;
-	padding: 10px 46px;
-	letter-spacing: 0.1em;
-}
-
-.h4 {
-	color: #000;
-	font-weight: 300;
-	font-size: 1em;
-	letter-spacing: 0.4em;
-	padding: 10px 46px;
-	text-align: center;
-	line-height: 1.6
-}
-
-.section__menu {
-	border-top: 1px solid #E1E1E1;
-	border-bottom: 1px solid #E1E1E1;
-	justify-content: center;
-	height: auto;
-}
-
-/*Menu Links Section START*/
-
-.menu__link {
-	display: inline-block;
-	text-decoration: none;
-	text-align: center;
-	padding: 10px 35px;
-	font-size: 14px;
-	font-weight: bold;
-	letter-spacing: 0.075em;
-	color: #777;
-	transition: all 0.3s ease-in-out;
-}
-
-.menu__link:visited {
-	color: #777;
-}
-.menu__link:hover, .menu__link:active {
-	color: #000;
-}
-
-/*Menu Links Section END*/
-
-/*Separators*/
-
-.menu__link + .menu__link {
-	background: url(../img/separator.png) no-repeat center left;
-}
-
-/*Content Section START*/
 
 .section {
-	position: relative;
-	background-color: #FAFAFA;
-	padding-top: 30px;
-	padding-bottom: 70px;
-	box-shadow: 0px -3px 4.75px 0.25px rgba(163, 163, 163, 0.1);
+	padding-top: 9vh;
+	padding-bottom: 9vh;
 }
 
-.section__content {
-	margin-top: 30px;
+.card-head {
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: space-between;
+	align-items: baseline;
 }
 
-.content__column {
-	max-width: 360px;
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: space-around;
+/*ANIMATIONS*/
+
+@keyframes slideIn {
+	from {
+		transform: translate3d(0, 100%, 0);
+    	visibility: visible;
+	}
+
+	to {
+		transform: translate3d(0, 0, 0);
+	}
 }
 
-.content__img {
-	display: block;
-	max-width: 100%;
-	height: auto;
-	margin-top: 30px;
-	transition: 0.3s ease-in-out;
-}
-.content__img:hover {
-	-ms-transform: scale(1.025, 1.025); /* IE 9 */
-    -webkit-transform: scale(1.025, 025.025); /* Safari */
-    transform: scale(1.025, 1.025);
+/*ICONS*/
+
+.icon-large {
+	font-size: 80px;
+	line-height: 1.667;
 }
 
-.section__load {
-margin-top: 30px;
-justify-content: space-around;
+.icon-medium {
+	font-size: 30px;
+	line-height: 1.667;
 }
 
-.button {
-	font-family: 'Roboto', sans-serif;
+.icon-small {
+	font-size: 20px;
+	line-height: 1.25;
+}
+
+.icon-lightBlue {
+	color: #80d8ff;
+}
+
+.icon-blue {
+	color: #82b1ff;
+}
+
+.icon-darkBlue {
+	color: #061e37;
+}
+
+.icon-purple {
+	color: #b388ff;
+}
+
+.icon-pink {
+	color: #ea80fc;
+}
+
+.icon-rounded {
+	width: 60px;
+	height: 60px;
+	background-color: #fff; 
+}
+
+/*SHADOW PROPERTIES*/
+
+.box-shadow {
+	box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+}
+
+/*BUTTONS*/
+
+.button-styled {
+	min-width: 120px;
+	font-size: 15px;
+	font-weight: 700;
 	text-transform: uppercase;
-	font-weight: bold;
-	font-size: 13px;
-	letter-spacing: 0.05em;
+	padding: 15px 20px;
+	background-color: #061E37;
 	color: #fff;
-	text-align: center;
-	background-color: #959595;
-	border: none;
+	transition: 0.2s ease-in-out;
+}
+
+.button-header:hover, .button-header:hover  {
+	color: #061E37;
+	background-color: #fff;
+	font-weight: 400;
+}
+
+.button-section {
+	color: #fff;
+	background-color: #1DE9B6;
+	border: 2px solid #1DE9B6;
+}
+
+.button-section:hover, .button-section:hover  {
+	background-color: #fff;
+	color: #1DE9B6;
+	font-weight: 400;
+}
+
+.collapser:link, .collapser:visited, .collapser:hover, .collapser:active  {
+	text-decoration: none;
+	color: #061e37;
+	font-size:  1.5625em;
+	margin-left: auto;
+	padding-left: 75px;
+}
+
+/*BG COLORS*/
+
+.bg-color-lightBlue {
+	background-color: #80d8ff;
+}
+
+.bg-color-blue {
+	background-color: #82b1ff;
+}
+
+.bg-color-darkBlue {
+	background-color: #061e37;
+}
+
+.bg-color-purple {
+	background-color: #b388ff;
+}
+
+.bg-color-pink {
+	background-color: #ea80fc;
+}
+
+/*FORMS*/
+
+.form-control {
+	color: #061e37;
+	font-size: 0.9375em;
+	font-weight: 500;
+	border-color: #061e37;
+	background-color: #fafafa;
+}
+
+/*Nav Section START*/
+
+.navigation {
+	padding-top: 50px;
+}
+
+.navigation__link {
+	font-size: 15px;
+	font-weight: 600;
+	transition: 0.15s ease-in-out;
+}
+
+.navbar__main li {
+	padding-right: 12px;
+	padding-left: 12px;
+}
+
+.navigation__link:link, .navigation__link:visited {
+	color: #fff;
+}
+.navigation__link:hover, .navigation__link:active {
+	color: #061E37;
+}
+
+.navigation__button {
+	font-size: 12px;
+	border: 1px solid #fff;
 	border-radius: 2px;
 }
 
+.navigation__button:hover, .navigation__button:active {
+	border-color: #061E37;
+}
+
+.navigation__toggler, .navigation__toggler:hover {
+	font-size: 1.5em;
+	color: #fff;
+}
+
+/*Header Section START*/
+
+.header__content {
+	min-height: 650px;
+}
+
+.header__h1 {
+	font-weight: 800;
+	font-size: 3.4375em;
+	text-transform: uppercase;
+	color: #fff;
+	animation-name: slideIn;
+	animation-duration: 0.3s;
+}
+
+.header__p {
+	font-size: 18px;
+	color: #fff;
+	line-height: 1.9;
+}
+/*Header Section END*/
+
+/*Content Section START*/
+
+.about {
+	background-color: #fff;
+}
+
+.section_h2 {
+	font-size: 2.8125em;
+	font-weight: 600;
+	color: #061e37
+}
+
+.section_h3 {
+	font-size: 1.5625em;
+	font-weight: 600;
+	color: #b0bec5
+}
+
+.section_h4 {
+	font-size: 1.25em;
+	font-weight: 600;
+	color: #061e37
+}
+
+.section_p {
+	font-size: 0.9375em;
+	line-height: 1.667;
+	color: #b0bec5;
+}
+
+/*Stats Section*/
+
+.stats__text {
+	width: 140px;
+	display: inline-block;
+	font-size: 1.25em;
+	line-height: 1.25;
+	font-weight: 800;
+	color: #fff;
+	padding-left: 20px;
+}
+
+/*Services Section*/
+
+.p-card {
+	font-size: 0.9375em;
+	line-height: 1.6666;
+	letter-spacing: 0.03em;
+}
+
+.section__card {
+	margin-top: 20px;
+}
+
+/*Comments Section*/
+
+.comments {
+	width: 100%;
+  	background: linear-gradient( 143deg, rgba(29,233,182,0.95) 0%, rgba(0,184,212,0.95) 100%),
+  	url(../img/rewiew_background.jpg)  center center no-repeat / cover;
+}
+
+.comments__card {
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.comments__comment {
+	background-color: #fff;
+	padding: 1.75em;
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
+}
+
+.avatar {
+	height: 60px;
+	width: 60px;
+	margin-right: 3vw;
+}
+
+.comments__author {
+	font-size: 1.125em;
+	font-weight: 700;
+	line-height: 1.388;
+	color: #061e37;
+}
+
+.comments__text {
+	font-size: 0.9375em;
+	line-height: 1.6666;
+	font-style: italic;
+	color: #78909c;
+}
+
+/*Team Section*/
+
+.team__pill-toggler {
+	display: block;
+	width: 100px;
+	height: 100px;
+	opacity: 0.2;
+}
+
+.nav-pills .active {
+	opacity: 1;
+}
+
+.tab-pane {
+	animation-name: slideIn;
+	animation-duration: 0.5s;
+	animation-timing-function: ease-in-out;
+}
+
+.link-social, .link-social:link, .link-social:visited  {
+	color: #90a4ae;
+	transition: 0.3s;
+}
+
+.link-social:hover, .link-social:active  {
+	color: #061e37;
+}
+
+.link-social +.link-social {
+	padding-left: 25px;
+}
+
+/*Contacts Section*/
+
+.contacts {
+	background-color: #fafafa;
+}
+
+.contacts__text {
+	color: #061e37
+}
 /*Content Section END*/
 
-/*Footer Section START*/
 
-.footer {
-	margin-top: 65px;
-}
+/*MEDIA QUERIES*/
 
-.footer__logo {
-	display: block;
-	max-width: 100%;
-	height: auto;
-	margin: 0 auto;
-}
-
-.footer__socialmedia {
-	margin-top: 40px;
-	border-top: 1px solid #E1E1E1;
-	border-bottom: 1px solid #E1E1E1;
-}
-
-.footer__wrapper {
-	max-width: 420px;
-	margin: 0 auto;
-	justify-content: space-between;
-	align-items: center;
-	min-height: 60px;
-}
-
-.footer__social-icons {
-	display: inline-block;
-	color: #777;
-	transition: all 0.3s ease-in-out;
-}
-
-.footer__social-icons:hover {
-	color: #000
-}
-
-.footer__copyright {
-	font-weight: 400;
-	font-size: 13px;
-	letter-spacing: 0.025em;
-	color: #B5B5B5;
-	text-align: center;
-	margin: 34px auto 45px auto;
-	line-height: 1.6;
-}
-/*Footer Section END*/
-
-/*AWD Fof Mobile Phones START*/
-
-@media only screen and (max-width: 767px) {
-	
-	.navbar {height: auto; padding-bottom: 20px;}
-
-	.navbar__dropdown {
-		display: inline-block;
-		margin: auto;
- 	}
-	
-	.navbar__menu-button {
-		display: block;
-		font-size: 1.5em;
-		color: #4a4a4a;
+@media screen and (max-width: 768px) {
+	.header {
+		height: auto;
 	}
 
-	.navbar__phone-menu {
-		display: none;
-		position: absolute;
-		left: 0;
-		top: 82px;
-		transition: all 0.1s ease-in-out;
+	.navigation {
+	padding-top: 15px;
 	}
 
-	.navbar__dropdown:hover .navbar__phone-menu {
-		display: flex;
-		flex-flow: column nowrap;
-	}
-
-	.navbar__menu-item {
-		width: 100vw;
-		padding: 15px 15px;
-		text-decoration: none;
-		text-align: center;
-		background-color: #fff;
-		font-size: 1.5em;
-		font-weight: bold;
-		letter-spacing: 0.075em;
-		color: #4a4a4a;
-		transition: all 0.3s ease-in-out;
-	}
-
-	.logo {
-		margin: auto;
-	}
-
-	.slider {
-		height: 360px; 
-	}
-
-	.h1 {
-		padding: 10px 20px;
-	}
-
-	.navbar__link {
-		display: none;
-	}
-
-	.section__menu {
-		align-content: space-around;
-	}
-
-	.menu__link {
-		padding: 10px 50px;
-		width: 100%
-	}
-
-	.menu__link + .menu__link {
-	background: none;
-	}
-
-	.section__content {
-		flex-flow: row wrap;
-		justify-content: center;
-	}
-
-	.footer__wrapper {
-		justify-content: space-around;
-	}
-
-	.footer__social-icons {
-		width: 33%;
-		text-align: center;
-		margin: 10px 0;
-	}
-
-}
-
-/*AWD Fof Mobile Phones END*/
-
-/*AWD Fof Tablets START*/
-
-@media only screen and (min-width: 768px) and (max-width: 950px) {
-
-	.section__menu {
-		align-content: space-around;
-	}
-
-	.menu__link {
-		padding: 10px 50px;
-	}
-
-	.menu__link + .menu__link {
-		background: none;
-	}
-
-	.section__content {
-		flex-flow: row wrap;
-		justify-content: space-around;
-	}
-
-	.content__column {
-		max-width: 768px;
-	}
-}
-
-/*AWD Fof Tablets START*/
