--- a/css/style.css
+++ b/css/style.css
@@ -1,417 +1,262 @@
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  position: relative;
+  color: #4D494A
 }
 
 .wrapper {
-	max-width: 1440px;
+	max-width: 1240px;
 }
 
-.wrapper-sm {
-	max-width: 800px;
+.h1 {
+	font-weight: 700;
+	font-size: 3em;
 }
 
-.wrapper-xs {
-	max-width: 660px;
+.h2 {
+	font-weight: 700;
+	font-size: 2em;
 }
 
-.header {
-	width: 100%;
-	height: 750px;
-  	background: linear-gradient( 143deg, rgba(29,233,182,0.9) 0%, rgba(0,184,212,0.9) 100%),
-  	url(../img/header_background.jpg)  center center no-repeat / cover;
+.h3 {
+	font-weight: 600;
+	color: #736D6E;
 }
 
-.section {
-	padding-top: 9vh;
-	padding-bottom: 9vh;
+.h5 {
+	color: #736D6E;
 }
 
-.card-head {
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: baseline;
+
+/*BUTTONS*/
+.btn {
+	background-color: #4D494A;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 600;
+	border: 2px solid #4D494A;
+	transition: all 0.2s ease-in-out;
+	outline: 0;
+}
+
+.btn:hover {
+	background-color: transparent;
+	color: #4D494A
+}
+
+.button-secondary {
+	background-color: #736D6E;
+	color: #fff;
+	border-color: #736D6E;
+}
+
+.button-animate {
+	padding-left: 30px;
+	padding-right: 14px;
+}
+
+.button-animate i {
+	opacity: 0;
+	transition: all 0.2s ease-in-out;
+}
+
+.button-animate:hover {
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
+.button-animate:hover i {
+	opacity: 1;
 }
 
 /*ANIMATIONS*/
 
-@keyframes slideIn {
-	from {
-		transform: translate3d(0, 100%, 0);
-    	visibility: visible;
-	}
+@keyframes bounceInLeft {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
 
-	to {
-		transform: translate3d(0, 0, 0);
-	}
+  0% {
+    opacity: 0;
+    transform: translate3d(-3000px, 0, 0);
+  }
+
+  60% {
+    opacity: 1;
+    transform: translate3d(25px, 0, 0);
+  }
+
+  75% {
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  90% {
+    transform: translate3d(5px, 0, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-/*ICONS*/
+@keyframes bounceInDown {
+  from,
+  60%,
+  75%,
+  90%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
 
-.icon-large {
-	font-size: 80px;
-	line-height: 1.667;
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -3000px, 0);
+  }
+
+  60% {
+    opacity: 1;
+    transform: translate3d(0, 25px, 0);
+  }
+
+  75% {
+    transform: translate3d(0, -10px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, 5px, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-.icon-medium {
-	font-size: 30px;
-	line-height: 1.667;
-}
 
-.icon-small {
-	font-size: 20px;
-	line-height: 1.25;
-}
+/*NAVBAR SECTION START*/
 
-.icon-lightBlue {
-	color: #80d8ff;
-}
-
-.icon-blue {
-	color: #82b1ff;
-}
-
-.icon-darkBlue {
-	color: #061e37;
-}
-
-.icon-purple {
-	color: #b388ff;
-}
-
-.icon-pink {
-	color: #ea80fc;
-}
-
-.icon-rounded {
-	width: 60px;
-	height: 60px;
-	background-color: #fff; 
-}
-
-/*SHADOW PROPERTIES*/
-
-.box-shadow {
-	box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
-}
-
-/*BUTTONS*/
-
-.button-styled {
-	min-width: 120px;
-	font-size: 15px;
-	font-weight: 700;
-	text-transform: uppercase;
-	padding: 15px 20px;
-	background-color: #061E37;
-	color: #fff;
-	transition: 0.2s ease-in-out;
-}
-
-.button-header {
-	border: 2px solid #061E37;
-}
-
-.button-header:hover, .button-header:hover  {
-	color: #061E37;
-	background-color: #fff;
-	font-weight: 400;
-}
-
-.button-section {
-	color: #fff;
-	background-color: #1DE9B6;
-	border: 2px solid #1DE9B6;
-}
-
-.button-section:hover, .button-section:active  {
-	background-color: #fff;
-	color: #1DE9B6;
-	font-weight: 400;
-}
-
-.section__collapser:link, .section__collapser:visited,.section__collapser:hover,.section__collapser:active {
-	text-decoration: none;
-	color: #061e37;
-	padding: 0;
-}
-
-.collapser {
-	font-size:  1.5625em;
-	margin-left: auto;
-}
-
-/*BG COLORS*/
-
-.bg-color-lightBlue {
-	background-color: #80d8ff;
-}
-
-.bg-color-blue {
-	background-color: #82b1ff;
-}
-
-.bg-color-darkBlue {
-	background-color: #061e37;
-}
-
-.bg-color-purple {
-	background-color: #b388ff;
-}
-
-.bg-color-pink {
-	background-color: #ea80fc;
-}
-
-/*FORMS*/
-
-.form-styled {
-	color: #061e37;
-	font-size: 0.9375em;
-	font-weight: 500;
-	border-color: #061e37;
-	background-color: #fafafa;
-}
-
-/*Nav Section START*/
-
-.navigation {
-	padding-top: 50px;
-}
-
-.navigation__link {
-	font-size: 15px;
-	font-weight: 600;
-	transition: 0.15s ease-in-out;
-}
-
-.navbar__main li {
-	padding-right: 12px;
-	padding-left: 12px;
-}
-
-.navigation__link:link, .navigation__link:visited {
-	color: #fff;
-}
-.navigation__link:hover, .navigation__link:active {
-	color: #061E37;
-}
-
-.navigation__button {
-	font-size: 12px;
-	border: 1px solid #fff;
-	border-radius: 2px;
-}
-
-.navigation__button:hover, .navigation__button:active {
-	border-color: #061E37;
-}
-
-.navigation__toggler, .navigation__toggler:hover {
-	font-size: 1.5em;
-	color: #fff;
-}
-
-/*Header Section START*/
-
-.header__content {
-	min-height: 650px;
-}
-
-.header__h1 {
-	font-weight: 800;
-	font-size: 3.4375em;
-	text-transform: uppercase;
-	color: #fff;
-	animation-name: slideIn;
-	animation-duration: 0.3s;
-}
-
-.header__p {
-	font-size: 18px;
-	color: #fff;
-	line-height: 1.9;
-}
-/*Header Section END*/
-
-/*Content Section START*/
-
-.about {
+.navbar {
 	background-color: #fff;
 }
 
-.section_h2 {
-	font-size: 2.8125em;
-	font-weight: 600;
-	color: #061e37
+.navbar-toggler-icon {
+	color: #4D494A;
 }
 
-.section_h3 {
-	font-size: 1.5625em;
-	font-weight: 600;
-	color: #b0bec5
+.navbar-brand {
+	animation-name: bounceInLeft;
+	-webkit-animation-duration: 1s;
+	-o-animation-duration: 1s;
+	animation-duration: 1s;
 }
 
-.section_h4 {
-	font-size: 1.25em;
-	font-weight: 600;
-	color: #061e37
-}
-
-.section_p {
-	font-size: 0.9375em;
-	line-height: 1.667;
-	color: #b0bec5;
-}
-
-/*Stats Section*/
-
-.stats__text {
-	width: 140px;
-	display: inline-block;
-	font-size: 1.25em;
-	line-height: 1.25;
-	font-weight: 800;
-	color: #fff;
-	padding-left: 20px;
-}
-
-/*Services Section*/
-
-.p-card {
-	font-size: 0.9375em;
-	line-height: 1.6666;
-	letter-spacing: 0.03em;
-}
-
-.section__card {
-	margin-top: 20px;
-}
-
-/*Comments Section*/
-
-.comments {
-	width: 100%;
-  	background: linear-gradient( 143deg, rgba(29,233,182,0.95) 0%, rgba(0,184,212,0.95) 100%),
-  	url(../img/rewiew_background.jpg)  center center no-repeat / cover;
-}
-
-.comments__card {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-around;
-	align-items: center;
-}
-
-.comments__comment {
-	background-color: #fff;
-	padding: 1.75em;
-	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
-}
-
-.avatar {
-	height: 60px;
-	width: 60px;
-	margin-right: 3vw;
-}
-
-.comments__author {
-	font-size: 1.125em;
-	font-weight: 700;
-	line-height: 1.388;
-	color: #061e37;
-}
-
-.comments__text {
-	font-size: 0.9375em;
-	line-height: 1.6666;
-	font-style: italic;
-	color: #78909c;
-}
-
-/*Team Section*/
-
-.team__pill-toggler {
-	display: block;
-	width: 100px;
-	height: 100px;
-	opacity: 0.2;
-}
-
-.nav-pills .active {
-	opacity: 1;
-}
-
-.tab-pane {
-	animation-name: slideIn;
+.navbar-nav {
+	animation-name: bounceInDown;
+	-webkit-animation-duration: 0.5s;
+	-o-animation-duration: 0.5s;
 	animation-duration: 0.5s;
-	animation-timing-function: ease-in-out;
 }
 
-.link-social, .link-social:link, .link-social:visited  {
-	color: #90a4ae;
-	transition: 0.3s;
+.nav-link {
+	color: 	#4D494A;
+	text-transform: uppercase;
+	font-size: 0.925em;
+	text-align: center;
+	transition: 0.25s ease-in-out;
+	border-bottom: 1px solid #fff;
 }
 
-.link-social:hover, .link-social:active  {
-	color: #061e37;
+.nav-link:hover, .nav-link:active {
+	color: #000;
+	border-bottom: 1px solid #000;
 }
 
-.link-social +.link-social {
-	padding-left: 25px;
+.social-icon {
+	font-size: 1.2em;
+	font-weight: 400;
 }
 
-/*Contacts Section*/
-
-.contacts {
-	background-color: #fafafa;
+@media screen and (max-width: 710px) {
+	.social-icon {
+		display: none;
+	}
 }
 
-.contacts__text {
-	color: #061e37
-}
-/*Content Section END*/
-
-/*Footer Section START*/
-
-.footer {
-	background-color: #061e37;
-	font-size: 0.9375em;
+.nav-item .active {
+	color: #000;
+	border-bottom: 1px solid #000;
 }
 
-.footer__link-social, .footer__link-social:link, .footer__link-social:visited  {
-	color: #fff;
-	transition: 0.3s;
-	opacity: 0.3;
-	text-decoration: none;
+/*NAVBAR SECTION END*/
+
+/*HEADER SECTION START*/
+
+.header {
+	min-height: 400px;
+	background: linear-gradient( 143deg, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0.7) 100%),
+  	url(../img/background_header.jpg)  center center no-repeat / cover;
 }
 
-.footer__link-social:hover, .footer__link-social:active  {
-	opacity: 1;
+.header .container-fluid {
+	min-height: 400px;
 }
 
-.footer__link-social + .footer__link-social {
-	padding-left: 15px;
+/*HEADER SECTION END*/
+
+/*EXAMPLES SECTION START*/
+
+.examples {
+/*	min-height: 100vh;*/
+	background: linear-gradient( 143deg, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.6) 100%), #f1f1f1 url(../textures/tiny-squares.png)  center center repeat;
+	box-shadow: 0 -0.125rem .1rem rgba(0,0,0,.075);
 }
 
-.footer__link:link, .footer__link:visited {
-	color: #fff;
+.card {
+	margin-top: 30px;
+	box-shadow: 0.175rem 0.175rem .1rem rgba(0,0,0,.075);
+	transition: all 0.4s ease-in-out;
+	animation: bounceInLeft 1s;
+}
+
+@media screen and (min-width: 1024px) {
+	.card:hover {
+		-webkit-transform:scale(1.05, 1.1);
+		transform: scale(1.05, 1.1);
+	}
+}
+
+.card__container_img {
+	position: relative;
+}
+
+.card__img {
+	background-color: #4D494A;
+	transition: opacity 0.4s ease-in-out;
+}
+
+.img__icon-zoom {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3em;
+    color: #000;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+}
+
+.card:hover .card__img{
 	opacity: 0.7;
 }
 
-.footer__link:hover, .footer__link:active {
-	opacity: 1;
+.card:hover .img__icon-zoom{
+	opacity: 0.7;
 }
+/*EXAMPLES SECTION END*/
 
-/*Footer Section END*/
 
 /*MEDIA QUERIES*/
-
-@media screen and (max-width: 768px) {
-	.header {
-		height: auto;
-	}
-
-	.navigation {
-	padding-top: 15px;
-	}
-
